--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Telepathy -- Fiction'
 - !lcsh 'Parapsychology -- Fiction'
+- GITenberg
 title: The Big Fix
 url: http://www.gutenberg.org/ebooks/23599
